force-app/main/default/objects/Account/fields/Frota_Sascar__c.field-meta.xml
<CustomField>
    <fullName>Frota_Sascar__c</fullName>
    <formula>Frota_total_Sascar__c / Tamanho_da_Frota__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Frota Sascar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>