force-app/main/default/objects/Account/fields/Frota_total_Concorrente_Potencial__c.field-meta.xml
<CustomField>
    <fullName>Frota_total_Concorrente_Potencial__c</fullName>
    <label>Frota Concorrente/Potencial</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>