force-app/main/default/objects/Account/fields/Frota_total_Sascar__c.field-meta.xml
<CustomField>
    <fullName>Frota_total_Sascar__c</fullName>
    <label>Frota Sascar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>