force-app/main/default/objects/Account/fields/Gap_Visitacao__c.field-meta.xml
<CustomField>
    <fullName>Gap_Visitacao__c</fullName>
    <formula>Visitas_no_ano__c - Num_esperado_de_visitas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gap Visitação</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>