force-app/main/default/objects/Account/fields/Gest_o_de_Riscos__c.field-meta.xml
<CustomField>
    <fullName>Gest_o_de_Riscos__c</fullName>
    <label>Gestão de Riscos/Rastreamento</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recuperação do Veículo</fullName>
            </value>
            <value>
                <fullName>Recuperação da Frota</fullName>
            </value>
            <value>
                <fullName>Posição da Frota</fullName>
            </value>
            <value>
                <fullName>Utilização da Frota</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>