force-app/main/default/objects/Account/fields/GGF_Respons_vel__c.field-meta.xml
<CustomField>
    <fullName>GGF_Respons_vel__c</fullName>
    <label>GGF Responsável</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alan Garcia</fullName>
            </value>
            <value>
                <fullName>Alexandre Meirelles</fullName>
            </value>
            <value>
                <fullName>André Morais</fullName>
            </value>
            <value>
                <fullName>Carlos Lucas</fullName>
            </value>
            <value>
                <fullName>César Amaral</fullName>
            </value>
            <value>
                <fullName>Elísio Santos</fullName>
            </value>
            <value>
                <fullName>Emerson Sousa</fullName>
            </value>
            <value>
                <fullName>Jairo Antunes</fullName>
            </value>
            <value>
                <fullName>Luiz Felipe Gouvea</fullName>
            </value>
            <value>
                <fullName>Marcelo Barros</fullName>
            </value>
            <value>
                <fullName>Nivaldo Granja</fullName>
            </value>
            <value>
                <fullName>Rogério Magalhães</fullName>
            </value>
            <value>
                <fullName>Thiago Pereira</fullName>
            </value>
            <value>
                <fullName>Emerson Nogueira</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>