force-app/main/default/objects/Account/fields/GR__c.field-meta.xml
<CustomField>
    <fullName>GR__c</fullName>
    <description>Campo criado para o termo (CORP).</description>
    <label>Gerenciador de Risco</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Angelira</fullName>
            </value>
            <value>
                <fullName>APISUL Multisat</fullName>
            </value>
            <value>
                <fullName>Brasil Risk</fullName>
            </value>
            <value>
                <fullName>Buonny</fullName>
            </value>
            <value>
                <fullName>GV</fullName>
            </value>
            <value>
                <fullName>Opentech</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
            <value>
                <fullName>Raster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>