force-app/main/default/objects/Account/fields/GrupoEconomico__c.field-meta.xml
<CustomField>
    <fullName>GrupoEconomico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo econômico</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contas (Conta)</relationshipLabel>
    <relationshipName>Conta</relationshipName>
    <type>Lookup</type>
</CustomField>