force-app/main/default/objects/Account/fields/ID_do_lead__c.field-meta.xml
<CustomField>
    <fullName>ID_do_lead__c</fullName>
    <externalId>true</externalId>
    <label>ID do lead</label>
    <length>10</length>
    <type>Text</type>
</CustomField>