force-app/main/default/objects/Account/fields/Id_do_proprietario__c.field-meta.xml
<CustomField>
    <fullName>Id_do_proprietario__c</fullName>
    <formula>Owner.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id do proprietário</label>
    <type>Text</type>
</CustomField>