force-app/main/default/objects/Account/fields/Id_ERP__c.field-meta.xml
<CustomField>
    <fullName>Id_ERP__c</fullName>
    <description>ID de identificação do cliente no ERP</description>
    <inlineHelpText>ID de identificação do cliente no ERP</inlineHelpText>
    <label>Id ERP</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>