force-app/main/default/objects/Account/fields/IdExternoClienteIndicador__c.field-meta.xml
<CustomField>
    <fullName>IdExternoClienteIndicador__c</fullName>
    <description>Id externo (no sistema de pré-cadastro) do cliente que indicou este cliente.</description>
    <inlineHelpText>Id externo (no sistema de pré-cadastro) do cliente que indicou este cliente.</inlineHelpText>
    <label>Código programa indicação</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>