force-app/main/default/objects/Account/fields/Indica_o__c.field-meta.xml
<CustomField>
    <fullName>Indica_o__c</fullName>
    <label>Indicação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PARA BLUETEC</fullName>
            </value>
            <value>
                <fullName>PARA SIGGO</fullName>
            </value>
            <value>
                <fullName>PARA CORP</fullName>
            </value>
            <value>
                <fullName>NÃO É INDICAÇÃO</fullName>
            </value>
            <value>
                <fullName>PARA FRETEIRO</fullName>
            </value>
            <value>
                <fullName>PARA CARGO TRACCK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>