force-app/main/default/objects/Account/fields/Indica_para_outra_empresa__c.field-meta.xml
<CustomField>
    <fullName>Indica_para_outra_empresa__c</fullName>
    <label>Indica para outra empresa?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>