force-app/main/default/objects/Account/fields/Indicador__c.field-meta.xml
<CustomField>
    <fullName>Indicador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Indicador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contas relacionadas</relationshipLabel>
    <relationshipName>Contas</relationshipName>
    <type>Lookup</type>
</CustomField>