force-app/main/default/objects/Account/fields/J_Foi_Cliente_Sascar__c.field-meta.xml
<CustomField>
    <fullName>J_Foi_Cliente_Sascar__c</fullName>
    <label>Já foi cliente Sascar?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>