force-app/main/default/objects/Account/fields/Ja_possui_login_senha__c.field-meta.xml
<CustomField>
    <fullName>Ja_possui_login_senha__c</fullName>
    <inlineHelpText>O instalador entregou o Kit de boas-vindas?</inlineHelpText>
    <label>Foi entregue o Kit de boas-vindas?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>