force-app/main/default/objects/Account/fields/MapAnything_AddressLine1__c.field-meta.xml
<CustomField>
    <fullName>MapAnything_AddressLine1__c</fullName>
    <formula>Enderecos_Cobranca_Logradouro__c &amp; &#39;, &#39; &amp;  TEXT(Enderecos_Cobranca_Numero__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MapAnything_AddressLine1</label>
    <type>Text</type>
</CustomField>