force-app/main/default/objects/Account/fields/Marca_do_concorrente__c.field-meta.xml
<CustomField>
    <fullName>Marca_do_concorrente__c</fullName>
    <label>Marca do concorrente</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Utiliza_Equipamento_do_Concorrente__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AUTOTRAC</fullName>
            </value>
            <value>
                <fullName>BRIDGESTONE</fullName>
            </value>
            <value>
                <fullName>BYSAT</fullName>
            </value>
            <value>
                <fullName>CARSYSTEM</fullName>
            </value>
            <value>
                <fullName>CONFORCE</fullName>
            </value>
            <value>
                <fullName>CONTINENTAL</fullName>
            </value>
            <value>
                <fullName>FIRESTONE</fullName>
            </value>
            <value>
                <fullName>GOLSAT</fullName>
            </value>
            <value>
                <fullName>GOODYEAR</fullName>
            </value>
            <value>
                <fullName>ITURAN</fullName>
            </value>
            <value>
                <fullName>LINK</fullName>
            </value>
            <value>
                <fullName>ONIXSAT</fullName>
            </value>
            <value>
                <fullName>OUTRA</fullName>
            </value>
            <value>
                <fullName>PIRELLI</fullName>
            </value>
            <value>
                <fullName>POINTER</fullName>
            </value>
            <value>
                <fullName>PORTO SEGURO</fullName>
            </value>
            <value>
                <fullName>POSITRON</fullName>
            </value>
            <value>
                <fullName>SOFTRACK</fullName>
            </value>
            <value>
                <fullName>TRACKER</fullName>
            </value>
            <value>
                <fullName>TRUCKLOG</fullName>
            </value>
            <value>
                <fullName>ZATIX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>