force-app/main/default/objects/Account/fields/Mes_da_Proxima_Visita__c.field-meta.xml
<CustomField>
    <fullName>Mes_da_Proxima_Visita__c</fullName>
    <formula>MONTH(Data_da_Ultima_Visita__c + 30*12/(VALUE(TEXT(Cadencia__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mês da Próxima Visita</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>