force-app/main/default/objects/Account/fields/Modelo_do_Ve_culo__c.field-meta.xml
<CustomField>
    <fullName>Modelo_do_Ve_culo__c</fullName>
    <label>Modelo do Veículo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Modelo do Veículo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>