force-app/main/default/objects/Account/fields/Motivo_nao_criacao_Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Motivo_nao_criacao_Oportunidade__c</fullName>
    <label>Motivo não criação Oportunidade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Estratégia: o deslocamento não compensa</fullName>
            </value>
            <value>
                <fullName>Estratégia: cliente pequeno e / ou pequeno influente</fullName>
            </value>
            <value>
                <fullName>Financeiro: Cliente em condições financeiras precárias</fullName>
            </value>
            <value>
                <fullName>Produto: Sem homologação no doador de carga</fullName>
            </value>
            <value>
                <fullName>Produto: Sem homologação no GR</fullName>
            </value>
            <value>
                <fullName>Produto: sem aprovação no segurador</fullName>
            </value>
            <value>
                <fullName>Produto: Nenhum serviço de monitoramento / alarme ativo</fullName>
            </value>
            <value>
                <fullName>Produto: sem serviços de recuperação</fullName>
            </value>
            <value>
                <fullName>Produto: sem funções básicas para o cliente</fullName>
            </value>
            <value>
                <fullName>Rede Técnica: Sem assistência técnica na região</fullName>
            </value>
            <value>
                <fullName>O cliente não existe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>