force-app/main/default/objects/Account/fields/Motivo_problema_instalacao__c.field-meta.xml
<CustomField>
    <fullName>Motivo_problema_instalacao__c</fullName>
    <description>Campo para pesquisa para os clientes recém instalados - MGM</description>
    <inlineHelpText>Marque quais são os problemas que ele enfrentou no processo de instalação. Descreva brevemente o(s) problema(s) no campo  OBS.</inlineHelpText>
    <label>Problema</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agendamento</fullName>
            </value>
            <value>
                <fullName>&quot;No Show&quot; técnico</fullName>
            </value>
            <value>
                <fullName>Danificaram o veículo</fullName>
            </value>
            <value>
                <fullName>Comportamento do Instalador</fullName>
            </value>
            <value>
                <fullName>Outros (Especificar no campo OBS.)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>