force-app/main/default/objects/Account/fields/N_do_termo__c.field-meta.xml
<CustomField>
    <fullName>N_do_termo__c</fullName>
    <label>Nº do termo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>