force-app/main/default/objects/Account/fields/N_vel_de_relacionamento_com_a_Michelin__c.field-meta.xml
<CustomField>
    <fullName>N_vel_de_relacionamento_com_a_Michelin__c</fullName>
    <label>Nível de relacionamento com a MI (1 à 7)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>