force-app/main/default/objects/Account/fields/N_vel_de_Satisfa_o_Contesta_es__c.field-meta.xml
<CustomField>
    <fullName>N_vel_de_Satisfa_o_Contesta_es__c</fullName>
    <description>Nível de Satisfação - Contestações</description>
    <label>Nível de Satisfação - Contestações</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>