force-app/main/default/objects/Account/fields/N_vel_de_Satisfa_o_Liga_es_Ativas__c.field-meta.xml
<CustomField>
    <fullName>N_vel_de_Satisfa_o_Liga_es_Ativas__c</fullName>
    <description>Nível de Satisfação - Ligações Ativas</description>
    <label>Nível de Satisfação - Ligações Ativas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>