force-app/main/default/objects/Account/fields/N_vel_de_Satisfa_o_Sasweb__c.field-meta.xml
<CustomField>
    <fullName>N_vel_de_Satisfa_o_Sasweb__c</fullName>
    <description>Nível de Satisfação - Sasweb</description>
    <label>Nível de Satisfação - Sasweb</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>