force-app/main/default/objects/Account/fields/Necessidade_principal__c.field-meta.xml
<CustomField>
    <fullName>Necessidade_principal__c</fullName>
    <label>Necessidade principal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Necessidade_principal</valueSetName>
    </valueSet>
</CustomField>