force-app/main/default/objects/Account/fields/Nome_como_no_cartao__c.field-meta.xml
<CustomField>
    <fullName>Nome_como_no_cartao__c</fullName>
    <label>Nome do portador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>