force-app/main/default/objects/Account/fields/Nome_contato_emergencia__c.field-meta.xml
<CustomField>
    <fullName>Nome_contato_emergencia__c</fullName>
    <label>Nome contato emergência</label>
    <length>100</length>
    <type>Text</type>
</CustomField>