force-app/main/default/objects/Account/fields/Nome_contato_instalacao__c.field-meta.xml
<CustomField>
    <fullName>Nome_contato_instalacao__c</fullName>
    <label>Nome contato instalação</label>
    <length>100</length>
    <type>Text</type>
</CustomField>