force-app/main/default/objects/Account/fields/Nome_do_portador__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_portador__c</fullName>
    <inlineHelpText>Conforme impresso no cartão.</inlineHelpText>
    <label>Nome do portador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>