force-app/main/default/objects/Account/fields/Num_esperado_de_visitas__c.field-meta.xml
<CustomField>
    <fullName>Num_esperado_de_visitas__c</fullName>
    <formula>IF( ISNUMBER(TEXT(Cadencia__c) ), 
FLOOR(MONTH(TODAY()) *  VALUE(TEXT(Cadencia__c))/12)
, 0)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Num esperado de visitas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>