force-app/main/default/objects/Account/fields/OBS_Motivo__c.field-meta.xml
<CustomField>
    <fullName>OBS_Motivo__c</fullName>
    <description>Campo para pesquisa para os clientes recém instalados - MGM</description>
    <inlineHelpText>Detalhe brevemente o(s) problema(s) enfrentados pelo cliente</inlineHelpText>
    <label>OBS. Problema</label>
    <length>255</length>
    <type>Text</type>
</CustomField>