force-app/main/default/objects/Account/fields/Ops_aprovs_manual_sem_proposta__c.field-meta.xml
<CustomField>
    <fullName>Ops_aprovs_manual_sem_proposta__c</fullName>
    <description>Totaliza as oportunidades aprovadas que ainda não tiveram proposta gerada para efeito de bloqueio da conta.</description>
    <label>Ops. aprovs. manual sem proposta</label>
    <summaryFilterItems>
        <field>Opportunity.Status_aprova_o_manual__c</field>
        <operation>equals</operation>
        <value>Aprovada</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Siggo_PersProp_NumeroProposta__c</field>
        <operation>equals</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>