force-app/main/default/objects/Account/fields/Optante_Simples__c.field-meta.xml
<CustomField>
    <fullName>Optante_Simples__c</fullName>
    <label>Optante Simples</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>