force-app/main/default/objects/Account/fields/Optante_Simples_ID__c.field-meta.xml
<CustomField>
    <fullName>Optante_Simples_ID__c</fullName>
    <formula>IF( ISPICKVAL( Optante_Simples__c , &#39;Sim&#39;) , &#39;S&#39;, &#39;N&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Optante Simples ID</label>
    <type>Text</type>
</CustomField>