force-app/main/default/objects/Account/fields/OS_s_assistencia_autorizada__c.field-meta.xml
<CustomField>
    <fullName>OS_s_assistencia_autorizada__c</fullName>
    <label>OS&#39;s assistência autorizada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>