force-app/main/default/objects/Account/fields/OS_s_Instalacao_aberta__c.field-meta.xml
<CustomField>
    <fullName>OS_s_Instalacao_aberta__c</fullName>
    <label>OS&#39;s Instalação aberta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>