force-app/main/default/objects/Account/fields/Outra_marca_de_pneu__c.field-meta.xml
<CustomField>
    <fullName>Outra_marca_de_pneu__c</fullName>
    <label>Outra marca de pneu</label>
    <type>TextArea</type>
</CustomField>