force-app/main/default/objects/Account/fields/Outro_GR__c.field-meta.xml
<CustomField>
    <fullName>Outro_GR__c</fullName>
    <label>Outro Gerenciado de risco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>