force-app/main/default/objects/Account/fields/Outro_motivo_para_n_o_ser_Michelin__c.field-meta.xml
<CustomField>
    <fullName>Outro_motivo_para_n_o_ser_Michelin__c</fullName>
    <label>Outro motivo para não ser Michelin</label>
    <type>TextArea</type>
</CustomField>